# RefactoAI

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
account/: urls.py
account/migrations/: 0001_initial.py  0002_alter_useraccount_email.py  0002_rename_commitsnum_userconfiguration_commit_interval_and_more.py  0002_repository.py  0003_alter_useraccount_email.py  0003_branch.py  0003_userconfiguration_created_at_and_more.py  0004_alter_useraccount_access_token_and_more.py  0004_alter_useraccount_user_name_pull_details.py  0004_remove_branch_branch_id_targetconfiguration_and_more.py  0005_dashboardfetch_pull_details_pull_id.py  0005_userconfiguration.py  0006_alter_pull_details_pull_id.py  0007_alter_pull_details_pull_id.py  0008_pull_details_branch_name.py  0009_alter_pull_details_branch_name.py  0010_rename_branch_name_pull_details_repo_name.py  0011_merge_20231121_0058.py
account/models/: __init__.py  account.py  branch.py  commit_configuration.py  configuration.py  pull_details.py  refactor.py  repository.py  source_configuration.py  target_configuration.py
account/proxies/: dashboard_fetch.py  github_account.py  github_configration.py
account/test/: __init__.py  test_authorization.py  test_branch.py  test_config.py  test_dashboard_fetch.py  test_pull_details.py
account/views/: api.py
core/: settings.py  urls.py
core/middlewares/: error_reporting.py
core/models/: base.py
core/utils/: base_view.py  exceptions.py  requests.py
docs/: Re-Facto_Smells.xlsx  dependencies.md  deployment.md  scenarios.md
service/: urls.py
(+42 files in other folders)
